examples/openshift/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  namespace: ohmyform
  name: ohmyform
spec:
  selector:
    app: ohmyform
  replicas: 1
  template:
    metadata:
      labels:
        app: ohmyform
    spec:
      containers:
        - name: ohmyform
          image: >-
            image-registry.openshift-image-registry.svc:5000/ohmyform/ohmyform:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: "/data"
              name: "cache-volume"
        volumes:
          - name: "cache-volume"
            emptyDir: {}
  strategy:
    type: Rolling
    rollingParams:
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
  triggers:
    - type: ConfigChange
