examples/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohmyform
  namespace: ohmyform
spec:
  selector:
    app: ohmyform
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
