examples/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ohmyform
  namespace: ohmyform
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: ohmyform.apps.<your-domain>
  to:
    kind: Service
    name: ohmyform
  tls:
    termination: "edge"
